<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/foodAnalysisFragment"
            android:icon="@drawable/analysis"
            android:title="@string/analysis" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/recommendationsFragment"
            android:icon="@drawable/recommend"
            android:title="@string/recommendations" />
        <item
            android:id="@+id/userProfileFragment"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/alertsFragment"
            android:icon="@drawable/notification"
            android:title="@string/alerts" />
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>
</menu>